--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,15 @@
+
+@article{lande1983measurement,
+  title={The measurement of selection on correlated characters},
+  author={Lande, Russell and Arnold, Stevan J},
+  journal={Evolution},
+  volume={37},
+  number={6},
+  pages={1210--1226},
+  year={1983},
+  publisher={Wiley Online Library}
+}
+
 @article{haldane1964defense,
   title={A defense of beanbag genetics},
   author={Haldane, John Burdon Sanderson},
