--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -31,7 +31,7 @@
 %\usepackage[normalem]{ulem}
 %\usepackage{tcolorbox}
 
-\usepackage{lineno}
+%\usepackage{lineno}  %%line numbering
 
 
 \newcommand{\ec}[1]{{\em \color{blue} #1}}
@@ -179,8 +179,8 @@ https://github.com/cooplab/popgen-notes/ and again are under a Creative Commons 
 %\newpage
 \tableofcontents
 
-\linenumbers
-\modulolinenumbers[2]
+%\linenumbers
+%\modulolinenumbers[2]
 
 %\newpage
 \include{Chapters/intro}
