straightening out response to seleciton chapter

--- a/math_background/Math-background.tex
+++ b/math_background/Math-background.tex
@@ -344,6 +344,9 @@ $X$.\sidenote{We can compute the sample variance as
 }
 Another important choice of $f$ is $f(x)=\log x$. Provided that $X$ is positive, $\exp(\E[\log X])$ corresponds to the  \emph{geometric mean of $X$}. Alternatively $1/\E[1/X]$ corresponds to the \emph{harmonic mean of $X$}. 
 
+\graham{Add notes about linearity of expectation etc, affine rescaling mean
+  and variance. Summing of means and variances}
+
 \subsection{Discrete Random Variable Distributions.}
 
  \begin{marginfigure}
